feat(browser): 增加常驻可见浏览器交互能力支持
- 在 BrowserWorkerCapabilities 中添加常驻可见浏览器标志
- 扩展 BrowserWorkerPort 接口，新增常驻交互相关方法及默认方法实现
- 实现 BrowserWorkerClient 交互会话管理、操作及状态查询功能
- 调整 BrowserWorkerLauncher 支持常驻交互进程启动和资源管理
- BrowserWorkerMain 支持处理常驻交互协议命令
- 新增与常驻交互相关的能力验证机制及能力文件标记
- 在 BuiltinIsolatedServices 中绑定常驻浏览器服务及必要授权
- 调整 AppServerRuntimeBootstrap 绑定常驻浏览器和会话续接
- 优化 AppServerBootstrap 注册常驻浏览器服务路由
- 浏览器存储处理扩展支持凭据捕获和状态保存回调
- 添加交互浏览器相关测试覆盖镜像布局、权限和能力判定
- 文档中补充本地工具和系统命令相关新增验收记录